<package>
 <name>dumbo_arm_test</name>
  <version>1.0.0</version>
  <description>
    Low level testing and control of Dumbo's Schunk modules. 
  </description>
  <maintainer email="fevb@kth.se">Francisco Vina</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/dumbo_arm_test</url>

  <author email="fevb@kth.se">Francisco Vina</author>
  <maintainer email="fevb@kth.se">Francisco Vina</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>kvaser_canlib</build_depend>
  <build_depend>dumbo_powercube_chain</build_depend>
  <run_depend>kvaser_canlib</run_depend>
  <run_depend>dumbo_powercube_chain</run_depend>

</package>